--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mui/styled-engine-sc": "^5.10.14",
     "@mui/x-date-pickers": "^5.0.8",
     "@mui/x-date-pickers-pro": "^5.0.8",
+    "@reduxjs/toolkit": "^1.9.1",
+    "axios": "^1.2.1",
     "date-fns": "^2.29.3",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
@@ -25,6 +27,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-jwt": "^1.1.7",
+    "react-redux": "^8.0.5",
     "redux": "^4.2.0",
     "sass": "^1.56.1",
     "styled-components": "^5.3.6",
